something wrong with tester, im going to bed